# ckanext-bcc-theme

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/bcc_theme/: bcc_metadata.yml  plugin.py
ckanext/bcc_theme/assets/: script.js  webassets.yml
ckanext/bcc_theme/public/: bcc_theme.css  logo.avif
ckanext/bcc_theme/templates/: base.html
ckanext/bcc_theme/templates/home/: index.html
ckanext/bcc_theme/tests/: test_plugin.py
