[project]
name = "ckanext-bcc-theme"
version = "0.0.1"
description = "Custom CKAN theme for the Belgian Climate Centre"
readme = "README.md"
authors = [
    {name = "Nicolas Noe", email = "nicolas@niconoe.eu"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "theme", "climate", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/thebinaryforest/ckanext-bcc-theme"

[project.entry-points."ckan.plugins"]
bcc_theme = "ckanext.bcc_theme.plugin:BccThemePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
